--- a/public/installation/hacs/index.print.html
+++ b/public/installation/hacs/index.print.html
@@ -27,18 +27,18 @@
     <link href="http://localhost:1313/installation/hacs/index.html" rel="canonical" type="text/html" title="HACS安装激活 :: HaBox 技术支持站">
     <link href="../../installation/hacs/index.xml" rel="alternate" type="application/rss+xml" title="HACS安装激活 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1724760252" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1724760252" rel="stylesheet">
-    <link href="../../css/fonts.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1724760252" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1724760252" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1724760252" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1724760252" rel="stylesheet">
-    <link href="../../css/print.css?1724760252" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1724760252" rel="stylesheet">
-    <script src="../../js/variant.js?1724760252"></script>
+    <link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1724760958" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1724760958" rel="stylesheet">
+    <link href="../../css/fonts.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1724760958" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1724760958" rel="stylesheet">
+    <link href="../../css/print.css?1724760958" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1724760958" rel="stylesheet">
+    <script src="../../js/variant.js?1724760958"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -100,37 +100,37 @@
 <h2 id="二安装hacs">二、安装HACS</h2>
 <p>由于Homeassistant的安装五花八门，所以网上有很多教程看上去非常复杂，但是在HA Box中安装HACS非常简单，下面我们一起来看看怎么安装。</p>
 <p>配置 - 设备与服务 ，在集成选项卡右下角点<strong>添加集成</strong>按钮</p>
-<p><a href="#R-image-b7a7a6a623addda3d5ce508b9f96aaac" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/646e80ca68cea28649631171ebf4b080391deba2_2_690x365.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b7a7a6a623addda3d5ce508b9f96aaac"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/646e80ca68cea28649631171ebf4b080391deba2_2_690x365.jpeg"></a></p>
-<p><a href="#R-image-51731c11f44c5628a30f6b73bcab30f0" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/7f8475698172de98cb56982a9863f0dacdef74f3_2_690x389.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-51731c11f44c5628a30f6b73bcab30f0"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/7f8475698172de98cb56982a9863f0dacdef74f3_2_690x389.jpeg"></a></p>
+<p><a href="#R-image-50511d68b7ccd42f62602c5e832450f6" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/646e80ca68cea28649631171ebf4b080391deba2_2_690x365.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-50511d68b7ccd42f62602c5e832450f6"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/646e80ca68cea28649631171ebf4b080391deba2_2_690x365.jpeg"></a></p>
+<p><a href="#R-image-1cbca8c2bc01aeb60220d2dd0238c984" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/7f8475698172de98cb56982a9863f0dacdef74f3_2_690x389.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1cbca8c2bc01aeb60220d2dd0238c984"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/7f8475698172de98cb56982a9863f0dacdef74f3_2_690x389.jpeg"></a></p>
 <p>在弹出窗口搜索HACS，你将看到HACS已经在列表里，然后点击它（整行随便点就行，右边的几个图标只是告诉你HACS的一些功能）</p>
-<p><a href="#R-image-9b6ed18b69adc1147803a1794ff1cacf" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9_2_690x384.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9b6ed18b69adc1147803a1794ff1cacf"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9_2_690x384.jpeg"></a></p>
+<p><a href="#R-image-ea7ca36ef8b4d1894854493ff7728d4f" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9_2_690x384.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ea7ca36ef8b4d1894854493ff7728d4f"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9_2_690x384.jpeg"></a></p>
 <p>全勾选上，然后提交</p>
-<p><a href="#R-image-eda74949d099022bac7ffba4e8c14f93" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/ee51e28640e1ccf768c04cec998f9325200c7452_2_690x482.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-eda74949d099022bac7ffba4e8c14f93"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/ee51e28640e1ccf768c04cec998f9325200c7452_2_690x482.jpeg"></a></p>
+<p><a href="#R-image-21eca7a37035fabeea72c3eecead8253" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/ee51e28640e1ccf768c04cec998f9325200c7452_2_690x482.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-21eca7a37035fabeea72c3eecead8253"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/ee51e28640e1ccf768c04cec998f9325200c7452_2_690x482.jpeg"></a></p>
 <p>接下来是打开链接，进到github.com有个授权的动作</p>
-<p><a href="#R-image-99962263b65dbf5a72b3c1d7e104389d" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d6a02518146386e9793c52f4200598aa7e8e9a6d_2_690x403.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-99962263b65dbf5a72b3c1d7e104389d"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d6a02518146386e9793c52f4200598aa7e8e9a6d_2_690x403.jpeg"></a></p>
+<p><a href="#R-image-5132500578704a5c4fe6fdd2e200dfae" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d6a02518146386e9793c52f4200598aa7e8e9a6d_2_690x403.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5132500578704a5c4fe6fdd2e200dfae"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d6a02518146386e9793c52f4200598aa7e8e9a6d_2_690x403.jpeg"></a></p>
 <p>不出以外的话，你将看到这个页面，复制刚才弹窗给你的验证码，直接鼠标全选上复制过去直接粘贴，然后点 Continue 继续</p>
-<p><a href="#R-image-81c4c6ec9267fae619323c92ef4b57bf" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/096b8d5fab1cbb4372edccd400f22dbf5b22579c_2_690x487.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-81c4c6ec9267fae619323c92ef4b57bf"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/096b8d5fab1cbb4372edccd400f22dbf5b22579c_2_690x487.png"></a></p>
+<p><a href="#R-image-5702ba4c2cb4d78184fc8bf0764a55d4" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/096b8d5fab1cbb4372edccd400f22dbf5b22579c_2_690x487.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5702ba4c2cb4d78184fc8bf0764a55d4"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/096b8d5fab1cbb4372edccd400f22dbf5b22579c_2_690x487.png"></a></p>
 <p>有时候会因为种种原因出现下面这个弹窗，直接关闭从头再来，我们接着往下走</p>
-<p><a href="#R-image-060aeb12bb3415adae3ad467e3eb689e" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/30b77c357606c423ee9554fed6843dfa583132f8.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-060aeb12bb3415adae3ad467e3eb689e"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/30b77c357606c423ee9554fed6843dfa583132f8.png"></a></p>
+<p><a href="#R-image-376bac2ca7e07e0cf18e132976d6cb48" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/30b77c357606c423ee9554fed6843dfa583132f8.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-376bac2ca7e07e0cf18e132976d6cb48"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/original/1X/30b77c357606c423ee9554fed6843dfa583132f8.png"></a></p>
 <p>出现下面这个页面说明你刚才的验证码没输错，可以点击Authorize hacs授权了</p>
-<p><a href="#R-image-bb01c8705d6864e925ccaa1a9b2b53ac" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f0c8d06fa2176e0832ba8532c56e1b013a2499e7_2_618x500.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-bb01c8705d6864e925ccaa1a9b2b53ac"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f0c8d06fa2176e0832ba8532c56e1b013a2499e7_2_618x500.jpeg"></a></p>
+<p><a href="#R-image-99bda837e908c5fa280e5b44d0ab4398" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f0c8d06fa2176e0832ba8532c56e1b013a2499e7_2_618x500.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-99bda837e908c5fa280e5b44d0ab4398"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f0c8d06fa2176e0832ba8532c56e1b013a2499e7_2_618x500.jpeg"></a></p>
 <p>OK,到这里说明已经配置成功了，可以关闭这个页面了。</p>
-<p><a href="#R-image-7b0a651af93cf4d3ec50d62e5174b667" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a7f6b1024805fa524a0d85d853081d3c184facda_2_690x379.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7b0a651af93cf4d3ec50d62e5174b667"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a7f6b1024805fa524a0d85d853081d3c184facda_2_690x379.png"></a></p>
+<p><a href="#R-image-77e486b9b311d65d9b782c89bf50f350" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a7f6b1024805fa524a0d85d853081d3c184facda_2_690x379.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-77e486b9b311d65d9b782c89bf50f350"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a7f6b1024805fa524a0d85d853081d3c184facda_2_690x379.png"></a></p>
 <p>返回到Homeassistant,HACS已经配置成功，并自动发现了家里的一些设备，可以对区域进行配置，告诉HACS这个设备是在客厅还是在卧室或者别的房间。当然你也可以直接点关闭或完成。</p>
-<p><a href="#R-image-caca81dc0debc94b271803b8f7a56eed" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eabec53c489ed0f40401fe3d59537fbed6f7d9ec_2_657x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-caca81dc0debc94b271803b8f7a56eed"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eabec53c489ed0f40401fe3d59537fbed6f7d9ec_2_657x500.png"></a></p>
+<p><a href="#R-image-5e81c2c6d0bebe8a17951b012201ffe2" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eabec53c489ed0f40401fe3d59537fbed6f7d9ec_2_657x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5e81c2c6d0bebe8a17951b012201ffe2"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eabec53c489ed0f40401fe3d59537fbed6f7d9ec_2_657x500.png"></a></p>
 <p>看，左侧已经出现HACS的连接，集成里面已配置列表已经有HACS了。</p>
-<p><a href="#R-image-1a66082b6c319e6e68b2a5c4d5180455" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d2c535214811638b31d0ebea7cf29975b2ca6e11_2_690x418.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1a66082b6c319e6e68b2a5c4d5180455"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d2c535214811638b31d0ebea7cf29975b2ca6e11_2_690x418.jpeg"></a></p>
+<p><a href="#R-image-0a9403a6b6bddef9a97d09d2ff856c3d" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d2c535214811638b31d0ebea7cf29975b2ca6e11_2_690x418.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0a9403a6b6bddef9a97d09d2ff856c3d"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d2c535214811638b31d0ebea7cf29975b2ca6e11_2_690x418.jpeg"></a></p>
 <p>此时你可能需要重启一下HA Box缓解一下激动的心情了</p>
 
             <footer class="footline">
@@ -140,8 +140,8 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1724760252" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1724760252" defer></script>
-    <script src="../../js/theme.js?1724760252" defer></script>
+    <script src="../../js/clipboard.min.js?1724760958" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1724760958" defer></script>
+    <script src="../../js/theme.js?1724760958" defer></script>
   </body>
 </html>
