--- a/public/installation/instructions/index.print.html
+++ b/public/installation/instructions/index.print.html
@@ -35,18 +35,18 @@
     <link href="http://localhost:1313/installation/instructions/index.html" rel="canonical" type="text/html" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站">
     <link href="../../installation/instructions/index.xml" rel="alternate" type="application/rss+xml" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1724760252" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1724760252" rel="stylesheet">
-    <link href="../../css/fonts.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1724760252" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1724760252" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1724760252" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1724760252" rel="stylesheet">
-    <link href="../../css/print.css?1724760252" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1724760252" rel="stylesheet">
-    <script src="../../js/variant.js?1724760252"></script>
+    <link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1724760958" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1724760958" rel="stylesheet">
+    <link href="../../css/fonts.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1724760958" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1724760958" rel="stylesheet">
+    <link href="../../css/print.css?1724760958" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1724760958" rel="stylesheet">
+    <script src="../../js/variant.js?1724760958"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -106,39 +106,39 @@
 <p>首先，感谢您选择由“HABox智能家居盒子”提供的Home assistant智能家居盒子，下面请与我一起进入这个神秘的小盒子一探究竟。</p>
 <h2 id="等待欢迎界面">等待欢迎界面</h2>
 <p>拿到盒子后，连上网线，插上电源，开机……启动并加载完成，大概要等待2分半种。然后在浏览器地址栏输入<a href="http://homeassistant.local:8123/" rel="external" target="_self">http://homeassistant.local:8123 79</a> 进行访问，不出所料，您将看到如下欢迎界面。（你也可以在路由器后台查看具体ip地址，然后输入<a href="http://ip:8123/" rel="external" target="_self">http://ip:8123 12</a>进行访问）</p>
-<p><a href="#R-image-7bcdddb0d2f4d9a90576fde807d33bc3" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/e44a5581acae451ff0707c4d898449c3e4e7b897_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7bcdddb0d2f4d9a90576fde807d33bc3"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/e44a5581acae451ff0707c4d898449c3e4e7b897_2_689x500.png"></a></p>
+<p><a href="#R-image-1e81c371cedbe971eba3735b009a74c6" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/e44a5581acae451ff0707c4d898449c3e4e7b897_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1e81c371cedbe971eba3735b009a74c6"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/e44a5581acae451ff0707c4d898449c3e4e7b897_2_689x500.png"></a></p>
 <h2 id="基本设置">基本设置</h2>
 <h3 id="创建用户">创建用户</h3>
-<p><a href="#R-image-99ebbfd3f4cbe4a4eb486beb1b2ea63a" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/dfe10595ea8029c304b1e5e1645970fd92430e55_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-99ebbfd3f4cbe4a4eb486beb1b2ea63a"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/dfe10595ea8029c304b1e5e1645970fd92430e55_2_689x500.png"></a></p>
+<p><a href="#R-image-1bc1f2297b373d4fe2bae6f857004574" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/dfe10595ea8029c304b1e5e1645970fd92430e55_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1bc1f2297b373d4fe2bae6f857004574"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/dfe10595ea8029c304b1e5e1645970fd92430e55_2_689x500.png"></a></p>
 <h3 id="选择家的位置">选择家的位置</h3>
 <p>这个地方如果搜索不到，您可以通过缩放地图，拖动地图中的位置图标到家所在的位置，然后是设置国家选项（如果是通过搜索找到的位置，就没有这个选项，系统自动设置了）</p>
-<p><a href="#R-image-4f31aad511fb580a6ecfcc0b2d0d2a8a" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/70fb324044aaae25d270320b9ae184765ade05e3_2_689x500.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4f31aad511fb580a6ecfcc0b2d0d2a8a"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/70fb324044aaae25d270320b9ae184765ade05e3_2_689x500.jpeg"></a></p>
-<p><a href="#R-image-9bd687dd26f540ac96f03ea74b2f5833" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/dcadf4b43bd1cb9d82c5fa5caf15d181a7b65bc1_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9bd687dd26f540ac96f03ea74b2f5833"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/dcadf4b43bd1cb9d82c5fa5caf15d181a7b65bc1_2_689x500.png"></a></p>
+<p><a href="#R-image-0b4a7fa39423017a375fbc537853f658" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/70fb324044aaae25d270320b9ae184765ade05e3_2_689x500.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0b4a7fa39423017a375fbc537853f658"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/70fb324044aaae25d270320b9ae184765ade05e3_2_689x500.jpeg"></a></p>
+<p><a href="#R-image-54c71130d3776698e39ea990ed1e1f07" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/dcadf4b43bd1cb9d82c5fa5caf15d181a7b65bc1_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-54c71130d3776698e39ea990ed1e1f07"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/dcadf4b43bd1cb9d82c5fa5caf15d181a7b65bc1_2_689x500.png"></a></p>
 <h3 id="信息收集">信息收集</h3>
 <p>接下来是收集数据，建议不选，然后是自动发现家里的智能设备，直接点完成即可。</p>
-<p><a href="#R-image-b33d7d85ae7a8acb7f2b4956d4354a13" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b15a07d394ded87a2aaf92bc75b369df4f73f99e_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b33d7d85ae7a8acb7f2b4956d4354a13"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b15a07d394ded87a2aaf92bc75b369df4f73f99e_2_689x500.png"></a></p>
-<p><a href="#R-image-6072211c8316de39b46a1f13b46bb02b" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eda80d3fa1b84e6608768f7e03a8792cb112d4af_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6072211c8316de39b46a1f13b46bb02b"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eda80d3fa1b84e6608768f7e03a8792cb112d4af_2_689x500.png"></a></p>
+<p><a href="#R-image-560f8252a79561a18b5c73017a320779" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b15a07d394ded87a2aaf92bc75b369df4f73f99e_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-560f8252a79561a18b5c73017a320779"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b15a07d394ded87a2aaf92bc75b369df4f73f99e_2_689x500.png"></a></p>
+<p><a href="#R-image-9ac720480684c62417caddf71fb5dd08" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eda80d3fa1b84e6608768f7e03a8792cb112d4af_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9ac720480684c62417caddf71fb5dd08"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eda80d3fa1b84e6608768f7e03a8792cb112d4af_2_689x500.png"></a></p>
 <h3 id="正式进入后台">正式进入后台</h3>
-<p><a href="#R-image-ec2b20d07143256374d6aeff6151ce60" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f93054b3b3f85803c4f7d6481b391a1beed52bdf_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ec2b20d07143256374d6aeff6151ce60"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f93054b3b3f85803c4f7d6481b391a1beed52bdf_2_689x500.png"></a><a href="#R-image-dc06afc60baac3bda74d51d4149bc012" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f93054b3b3f85803c4f7d6481b391a1beed52bdf_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-dc06afc60baac3bda74d51d4149bc012"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f93054b3b3f85803c4f7d6481b391a1beed52bdf_2_689x500.png"></a></p>
+<p><a href="#R-image-246cf7d41058230ff04f9b834b55173e" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f93054b3b3f85803c4f7d6481b391a1beed52bdf_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-246cf7d41058230ff04f9b834b55173e"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f93054b3b3f85803c4f7d6481b391a1beed52bdf_2_689x500.png"></a><a href="#R-image-66756111daa24db14918c787d73a9c39" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f93054b3b3f85803c4f7d6481b391a1beed52bdf_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-66756111daa24db14918c787d73a9c39"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f93054b3b3f85803c4f7d6481b391a1beed52bdf_2_689x500.png"></a></p>
 <h3 id="升级和修复">升级和修复</h3>
 <p>您可能会发现左侧配置选项边上有如上图所示的数字提示，点进去</p>
 <p>该升级升级，该修复修复</p>
-<p><a href="#R-image-43a34e0479b7bfee4c33be15b418f1d9" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d2c664e0a2fa27ba6fc97a773560ed5975a97b49_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-43a34e0479b7bfee4c33be15b418f1d9"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d2c664e0a2fa27ba6fc97a773560ed5975a97b49_2_689x500.png"></a></p>
-<p><a href="#R-image-df950c2a00b02f7b9d4aba51d3070718" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-df950c2a00b02f7b9d4aba51d3070718"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54_2_689x500.png"></a></p>
-<p><a href="#R-image-d05aebe7b7267455812b15a957318774" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f152df71ed02d594e08f2d4b0bc31e6186aa8d08_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d05aebe7b7267455812b15a957318774"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f152df71ed02d594e08f2d4b0bc31e6186aa8d08_2_689x500.png"></a></p>
-<p><a href="#R-image-b904f5d3d4d5e08fdc99531bb6cb7587" class="lightbox-link"><img alt="img" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3_2_689x500.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b904f5d3d4d5e08fdc99531bb6cb7587"><img alt="img" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3_2_689x500.png"></a></p>
+<p><a href="#R-image-223b2b7d603c6dd2e0d528eb8fb1e8be" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d2c664e0a2fa27ba6fc97a773560ed5975a97b49_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-223b2b7d603c6dd2e0d528eb8fb1e8be"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d2c664e0a2fa27ba6fc97a773560ed5975a97b49_2_689x500.png"></a></p>
+<p><a href="#R-image-4227d8a24d4d14ee9f3145365595026a" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4227d8a24d4d14ee9f3145365595026a"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54_2_689x500.png"></a></p>
+<p><a href="#R-image-d3057775f3a1f75b55a926629f6c6e18" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f152df71ed02d594e08f2d4b0bc31e6186aa8d08_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d3057775f3a1f75b55a926629f6c6e18"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/f152df71ed02d594e08f2d4b0bc31e6186aa8d08_2_689x500.png"></a></p>
+<p><a href="#R-image-9806b8efcc9c04c4bb83f2af691922ae" class="lightbox-link"><img alt="img" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3_2_689x500.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9806b8efcc9c04c4bb83f2af691922ae"><img alt="img" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3_2_689x500.png"></a></p>
 <h3 id="结束语">结束语</h3>
 <p>到此，您基本上就可以根据自身情况进行设备的接入和控制了，请持续关注我们，我们将持续发布使用HomeAssistant盒子相关的使用说明！</p>
 
@@ -149,8 +149,8 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1724760252" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1724760252" defer></script>
-    <script src="../../js/theme.js?1724760252" defer></script>
+    <script src="../../js/clipboard.min.js?1724760958" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1724760958" defer></script>
+    <script src="../../js/theme.js?1724760958" defer></script>
   </body>
 </html>
