--- a/public/network/habox-over-greatwall/index.print.html
+++ b/public/network/habox-over-greatwall/index.print.html
@@ -55,18 +55,18 @@
     <link href="http://localhost:1313/network/habox-over-greatwall/index.html" rel="canonical" type="text/html" title="Ha盒子配置科学上网 :: HaBox 技术支持站">
     <link href="../../network/habox-over-greatwall/index.xml" rel="alternate" type="application/rss+xml" title="Ha盒子配置科学上网 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1724760252" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1724760252" rel="stylesheet">
-    <link href="../../css/fonts.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1724760252" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1724760252" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1724760252" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1724760252" rel="stylesheet">
-    <link href="../../css/print.css?1724760252" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1724760252" rel="stylesheet">
-    <script src="../../js/variant.js?1724760252"></script>
+    <link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1724760958" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1724760958" rel="stylesheet">
+    <link href="../../css/fonts.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1724760958" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1724760958" rel="stylesheet">
+    <link href="../../css/print.css?1724760958" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1724760958" rel="stylesheet">
+    <script src="../../js/variant.js?1724760958"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -126,25 +126,25 @@
 <p>前提，你已拥有可以用的梯子（节点），如果没有请参考：</p>
 <p><a href="http://localhost:1313/network/free-vless-node/" rel="external" target="_self" title="搭建免费科学上网节点">搭建免费科学上网节点</a></p>
 <p>加载项商店搜索&quot;加速&quot;，安装它（实际上就是v2raya,很好用的工具）</p>
-<p><a href="#R-image-f820541c60e772106c1580d3b8aa1642" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/070adbd5eb8a90dc0647ed13a5c1acd21d457be8_2_690x260.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f820541c60e772106c1580d3b8aa1642"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/070adbd5eb8a90dc0647ed13a5c1acd21d457be8_2_690x260.png"></a></p>
+<p><a href="#R-image-5910f4a03d940cc8108318ab22c15210" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/070adbd5eb8a90dc0647ed13a5c1acd21d457be8_2_690x260.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5910f4a03d940cc8108318ab22c15210"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/070adbd5eb8a90dc0647ed13a5c1acd21d457be8_2_690x260.png"></a></p>
 <p>安装完后，点启动，配置选项卡可以不用修改默认就行</p>
-<p><a href="#R-image-0ea659c5221a1394feb5cd7659f333a8" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/df3fc21234594a0b1260007e57f8a549aebe0075_2_690x347.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0ea659c5221a1394feb5cd7659f333a8"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/df3fc21234594a0b1260007e57f8a549aebe0075_2_690x347.png"></a></p>
+<p><a href="#R-image-3bad3a48b85eb80c0f0c696482256891" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/df3fc21234594a0b1260007e57f8a549aebe0075_2_690x347.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3bad3a48b85eb80c0f0c696482256891"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/df3fc21234594a0b1260007e57f8a549aebe0075_2_690x347.png"></a></p>
 <p>打开WEB UI，初次进入需要设置用户名密码，设置后请记好了。</p>
 <p>导入节点</p>
-<p><a href="#R-image-fb063aff24c5a3bb0f0b6b92f70935bf" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3_2_690x201.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-fb063aff24c5a3bb0f0b6b92f70935bf"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3_2_690x201.png"></a></p>
+<p><a href="#R-image-c310c5b59d26c3cfab7eba1fa7f672ca" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3_2_690x201.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c310c5b59d26c3cfab7eba1fa7f672ca"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3_2_690x201.png"></a></p>
 <p>然后，选择，启动</p>
-<p><a href="#R-image-801ee3fe724256120951b77af093a451" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/6039b77ac1aa021955fcb987013cbb0505db3e30_2_690x296.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-801ee3fe724256120951b77af093a451"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/6039b77ac1aa021955fcb987013cbb0505db3e30_2_690x296.png"></a></p>
+<p><a href="#R-image-0b49ac5e706a39b63a1e9ea21f2d6975" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/6039b77ac1aa021955fcb987013cbb0505db3e30_2_690x296.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0b49ac5e706a39b63a1e9ea21f2d6975"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/6039b77ac1aa021955fcb987013cbb0505db3e30_2_690x296.png"></a></p>
 <p>此时，应该就可以用了。开个窗口测试一下
 <code>http://homeassistant.local:7681/</code>
 进入后输入login 回车
 输入curl <a href="https://www.google.com" rel="external" target="_self">www.google.com</a>回车</p>
 <p>是不是看到google页面返回的网页源码了？</p>
-<p><a href="#R-image-6c9b1f17d23b9c5d768c162e8142391f" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/61122d3118036f0ece49f011ee703944e86ec39a_2_690x307.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6c9b1f17d23b9c5d768c162e8142391f"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/61122d3118036f0ece49f011ee703944e86ec39a_2_690x307.jpeg"></a></p>
+<p><a href="#R-image-6cd1674163f5308233a08eef5cd8a091" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/61122d3118036f0ece49f011ee703944e86ec39a_2_690x307.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6cd1674163f5308233a08eef5cd8a091"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/61122d3118036f0ece49f011ee703944e86ec39a_2_690x307.jpeg"></a></p>
 <p>如果不行，请检查是不是节点或者订阅连接有问题</p>
 <p>关于 v2raya的其他配置，请自行bing。</p>
 <p>其他电脑想要科学上网，也可以修改网络配置，将网关设置为HA盒子的ip地址，也能通过HA盒子实现科学上网的梦想。</p>
@@ -156,8 +156,8 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1724760252" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1724760252" defer></script>
-    <script src="../../js/theme.js?1724760252" defer></script>
+    <script src="../../js/clipboard.min.js?1724760958" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1724760958" defer></script>
+    <script src="../../js/theme.js?1724760958" defer></script>
   </body>
 </html>
