--- a/public/access/homekit/index.html
+++ b/public/access/homekit/index.html
@@ -43,17 +43,17 @@
     <link href="../../access/homekit/index.xml" rel="alternate" type="application/rss+xml" title="HA Box桥接米家设备到HomeKit :: HaBox 技术支持站">
     <link href="../../access/homekit/index.print.html" rel="alternate" type="text/html" title="HA Box桥接米家设备到HomeKit :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1724760252" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1724760252" rel="stylesheet">
-    <link href="../../css/fonts.css?1724760252" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760252" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1724760252" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1724760252" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1724760252" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1724760252" rel="stylesheet">
-    <link href="../../css/print.css?1724760252" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1724760252"></script>
+    <link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1724760958" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1724760958" rel="stylesheet">
+    <link href="../../css/fonts.css?1724760958" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1724760958" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1724760958" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1724760958" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1724760958" rel="stylesheet">
+    <link href="../../css/print.css?1724760958" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1724760958"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -135,27 +135,27 @@
 <p>接下来，我们通过 HomeKit Bridge 将 Home Assistant 中设备桥接到 HomeKit。</p>
 <p>首先，我们要添加 HomeKit Bridge 集成。点击“配置”，进入“设备与服务”页面。在“集成”选项下，点右下角“添加集成”
 然后输入“homekit” 或者&quot;apple&quot;</p>
-<p><a href="#R-image-9a67ea6dc470b36fff2644fa912f1311" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/2405b767378b89b3a841ce13334d05cfc9061cf4_2_681x500.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9a67ea6dc470b36fff2644fa912f1311"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/2405b767378b89b3a841ce13334d05cfc9061cf4_2_681x500.jpeg"></a></p>
+<p><a href="#R-image-946ae0789d7f081b6baa2d899437d864" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/2405b767378b89b3a841ce13334d05cfc9061cf4_2_681x500.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-946ae0789d7f081b6baa2d899437d864"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/2405b767378b89b3a841ce13334d05cfc9061cf4_2_681x500.jpeg"></a></p>
 <p>点击“Apple”</p>
-<p><a href="#R-image-0db52a4407f55660db3628c498c61f5c" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a0787982f4a5381754deb552770fda923788b729_2_547x500.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0db52a4407f55660db3628c498c61f5c"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a0787982f4a5381754deb552770fda923788b729_2_547x500.jpeg"></a></p>
+<p><a href="#R-image-a9cc5797ed49f73ac26078e019a20528" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a0787982f4a5381754deb552770fda923788b729_2_547x500.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a9cc5797ed49f73ac26078e019a20528"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a0787982f4a5381754deb552770fda923788b729_2_547x500.jpeg"></a></p>
 <p>点击添加“HomeKit Bridge 集成”，按照指引完成添加。</p>
 <p>需要注意是的，如果你有温湿度传感器，点击“要添加的域”下拉选项，记得勾选“Sensor”，这个选项默认是不勾选的。</p>
-<p><a href="#R-image-12c66f68d2d229d2a5753323274ada9b" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a_2_690x459.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-12c66f68d2d229d2a5753323274ada9b"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a_2_690x459.jpeg"></a></p>
+<p><a href="#R-image-8bd6e46d8ad13cd2ccde1cd4a9a909e0" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a_2_690x459.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8bd6e46d8ad13cd2ccde1cd4a9a909e0"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a_2_690x459.jpeg"></a></p>
 <p>添加 HomeKit Bridge 集成成功后，点击界面左下角的通知按钮。查看 homekit 的配对二维码。</p>
-<p><a href="#R-image-62ca845ee14dd3f96dff074d59007ca4" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b08589161582a58e794c2cb626c3ec44e2299ce0_2_690x405.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-62ca845ee14dd3f96dff074d59007ca4"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b08589161582a58e794c2cb626c3ec44e2299ce0_2_690x405.jpeg"></a></p>
-<p><a href="#R-image-173262a5da5bc7678bb36a333e6e8ea3" class="lightbox-link"><img alt="image" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/3718c6668fa3b68c066162da84fe46579fd3c855_2_571x500.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-173262a5da5bc7678bb36a333e6e8ea3"><img alt="image" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/3718c6668fa3b68c066162da84fe46579fd3c855_2_571x500.jpeg"></a></p>
+<p><a href="#R-image-c1e83f8f1a0ff00c650536b31318e0a1" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b08589161582a58e794c2cb626c3ec44e2299ce0_2_690x405.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c1e83f8f1a0ff00c650536b31318e0a1"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/b08589161582a58e794c2cb626c3ec44e2299ce0_2_690x405.jpeg"></a></p>
+<p><a href="#R-image-d3b90f973e4a81ccd4f724b396254a99" class="lightbox-link"><img alt="image" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/3718c6668fa3b68c066162da84fe46579fd3c855_2_571x500.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d3b90f973e4a81ccd4f724b396254a99"><img alt="image" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/3718c6668fa3b68c066162da84fe46579fd3c855_2_571x500.jpeg"></a></p>
 <p>打开“家庭”应用，点击左上角的“+”号，选择“添加配件”。扫描上个步骤的得到的二维码，点击“添加到家庭”。在加入过程中，可能会提示“未认证设备”，点击“仍要添加”。然后完成剩余步骤，逐个添加设备。完成后，你就能能用Siri控制你的智能设备了。</p>
-<p><a href="#R-image-b37758e02159d6b7fe20d008d184f4e8" class="lightbox-link"><img alt="桥接homekit6.png" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce_2_230x500.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b37758e02159d6b7fe20d008d184f4e8"><img alt="桥接homekit6.png" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce_2_230x500.jpeg"></a></p>
-<p><a href="#R-image-016cda38a445554aaf67e89ca5fa1e53" class="lightbox-link"><img alt="桥接homekit7.png" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d9897e682d94ac340ab1a1aff6821f0dd09b2144_2_230x500.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-016cda38a445554aaf67e89ca5fa1e53"><img alt="桥接homekit7.png" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d9897e682d94ac340ab1a1aff6821f0dd09b2144_2_230x500.jpeg"></a></p>
-<p><a href="#R-image-99afd14f84791d1ef99186a7e19b4c4e" class="lightbox-link"><img alt="桥接homekit8.png" class="bg-white border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a07d8ff1e7af35d33193fdba56efa787ba360d89_2_230x500.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-99afd14f84791d1ef99186a7e19b4c4e"><img alt="桥接homekit8.png" class="bg-white border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a07d8ff1e7af35d33193fdba56efa787ba360d89_2_230x500.jpeg"></a></p>
+<p><a href="#R-image-e3e88733a1bbbbbaabad132874fbf9bc" class="lightbox-link"><img alt="桥接homekit6.png" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce_2_230x500.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e3e88733a1bbbbbaabad132874fbf9bc"><img alt="桥接homekit6.png" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce_2_230x500.jpeg"></a></p>
+<p><a href="#R-image-921ba3a8930f5fff706b88d3d51d70b3" class="lightbox-link"><img alt="桥接homekit7.png" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d9897e682d94ac340ab1a1aff6821f0dd09b2144_2_230x500.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-921ba3a8930f5fff706b88d3d51d70b3"><img alt="桥接homekit7.png" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/d9897e682d94ac340ab1a1aff6821f0dd09b2144_2_230x500.jpeg"></a></p>
+<p><a href="#R-image-e3122b6ea0ca91e1189727de0b75bc3a" class="lightbox-link"><img alt="桥接homekit8.png" class="border lazy lightbox noshadow figure-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a07d8ff1e7af35d33193fdba56efa787ba360d89_2_230x500.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e3122b6ea0ca91e1189727de0b75bc3a"><img alt="桥接homekit8.png" class="border lazy lightbox noshadow lightbox-image" loading="lazy" src="https://www.ha-box.xyz/uploads/default/optimized/1X/a07d8ff1e7af35d33193fdba56efa787ba360d89_2_230x500.jpeg"></a></p>
 <p>大功告成！</p>
 
             <footer class="footline">
@@ -228,13 +228,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1724760252" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1724760252" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1724760252" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1724760252" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1724760252" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1724760252" defer></script>
-        <script src="../../js/search.js?1724760252" defer></script>
+        <script src="../../js/auto-complete.js?1724760958" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1724760958" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1724760958" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1724760958" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1724760958" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1724760958" defer></script>
+        <script src="../../js/search.js?1724760958" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -318,8 +318,8 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1724760252" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1724760252" defer></script>
-    <script src="../../js/theme.js?1724760252" defer></script>
+    <script src="../../js/clipboard.min.js?1724760958" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1724760958" defer></script>
+    <script src="../../js/theme.js?1724760958" defer></script>
   </body>
 </html>
